--- a/.cmake/cmake-presets.yaml
+++ b/.cmake/cmake-presets.yaml
@@ -24,6 +24,17 @@ presets:
         :cmake:            "mipsel-mips32r2-linux-gnu/smb/x86_64-linux/bin/cmake"
         :legal:            "mipsel-mips32r2-linux-gnu/smb/legal-info"
 
+    lan966x:
+        :arch:             "arm64"
+        :cmake_flags:      "-DCMAKE_BUILD_TYPE=Release"
+        :brsdk:            "2019.02.7-103"
+        :brsdk_arch:       "arm64-armv8_a-linux-gnu"
+        :brsdk_branch:     "test"
+        :toolchainfile:    "arm64-armv8_a-linux-gnu/ls1046/x86_64-linux/share/buildroot/toolchainfile.cmake"
+        :cmake:            "arm64-armv8_a-linux-gnu/ls1046/x86_64-linux/bin/cmake"
+        :legal:            "arm64-armv8_a-linux-gnu/ls1046/legal-info"
+        :release_artifact: true
+
     arm64:
         :arch:             "arm64"
         :cmake_flags:      "-DCMAKE_BUILD_TYPE=Release"
