--- a/mesa/demo/CMakeLists.txt
+++ b/mesa/demo/CMakeLists.txt
@@ -227,6 +227,7 @@ APP_TARGET(NAME app_vsc7549TSN         MESA vsc7549TSN         MEBA meba_sparx5)
 APP_TARGET(NAME app_vsc7546TSN         MESA vsc7546TSN         MEBA meba_sparx5)
 APP_TARGET(NAME app_vsc7558TSN         MESA vsc7558TSN         MEBA meba_sparx5)
 APP_TARGET(NAME app_vsc7556            MESA vsc7556            MEBA meba_sparx5)
+APP_TARGET(NAME app_lan9668            MESA lan9668            MEBA meba_lan966x)
 
 
 if (CMAKE_SYSTEM_PROCESSOR STREQUAL "mipsel")
@@ -260,16 +261,18 @@ if (CMAKE_SYSTEM_PROCESSOR STREQUAL "mipsel")
     #IMG_TARGET(NAME mipsel_vsc7449        TYPE mfi  APP app_vsc7449  MACHINE jaguar2_pcb111 )
 
 elseif (CMAKE_SYSTEM_PROCESSOR STREQUAL "aarch64")
-    IMG_TARGET(NAME arm64_vsc7558TSN      TYPE ext4     APP app_vsc7558TSN      MACHINE fireant)
-    IMG_TARGET(NAME arm64_vsc7552TSN      TYPE ext4     APP app_vsc7552TSN      MACHINE fireant)
-    IMG_TARGET(NAME arm64_vsc7549TSN      TYPE ext4     APP app_vsc7549TSN      MACHINE fireant)
-    IMG_TARGET(NAME arm64_vsc7546TSN      TYPE ext4     APP app_vsc7546TSN      MACHINE fireant)
-    IMG_TARGET(NAME arm64_vsc7556         TYPE ext4     APP app_vsc7556         MACHINE fireant)
-    # IMG_TARGET(NAME ls1046_vsc7449  TYPE fit       APP app_vsc7449         MACHINE ls1046a)
-    # IMG_TARGET(NAME ls1046_vsc7437  TYPE fit       APP app_vsc7437         MACHINE ls1046a)
-    # IMG_TARGET(NAME ls1046_vsc7438  TYPE fit       APP app_vsc7438         MACHINE ls1046a)
-    # IMG_TARGET(NAME ls1046_vsc7514  TYPE fit       APP app_vsc7514         MACHINE ls1046a)
-    IMG_TARGET(NAME ls1046_vsc7512        TYPE fit      APP app_vsc7512         MACHINE ocelot_pcb121)
+    IMG_TARGET(NAME fit_ls1046_vsc7468  TYPE fit      APP app_vsc7468         MACHINE ls1046a)
+    IMG_TARGET(NAME fit_vsc7558TSN      TYPE ext4     APP app_vsc7558TSN      MACHINE fireant)
+    IMG_TARGET(NAME fit_vsc7552TSN      TYPE ext4     APP app_vsc7552TSN      MACHINE fireant)
+    IMG_TARGET(NAME fit_vsc7549TSN      TYPE ext4     APP app_vsc7549TSN      MACHINE fireant)
+    IMG_TARGET(NAME fit_vsc7546TSN      TYPE ext4     APP app_vsc7546TSN      MACHINE fireant)
+    IMG_TARGET(NAME fit_vsc7556         TYPE ext4     APP app_vsc7556         MACHINE fireant)
+    # IMG_TARGET(NAME fit_ls1046_vsc7449  TYPE fit       APP app_vsc7449         MACHINE ls1046a)
+    # IMG_TARGET(NAME fit_ls1046_vsc7437  TYPE fit       APP app_vsc7437         MACHINE ls1046a)
+    # IMG_TARGET(NAME fit_ls1046_vsc7438  TYPE fit       APP app_vsc7438         MACHINE ls1046a)
+    # IMG_TARGET(NAME fit_ls1046_vsc7514  TYPE fit       APP app_vsc7514         MACHINE ls1046a)
+    # IMG_TARGET(NAME fit_ls1046_vsc7512  TYPE fit       APP app_vsc7512         MACHINE ls1046a)
+    IMG_TARGET(NAME fit_ls1046_lan9668  TYPE fit      APP app_lan9668         MACHINE ls1046a)
 
 elseif(CMAKE_SYSTEM_PROCESSOR STREQUAL "armv7l")
     IMG_TARGET(NAME armv7_vsc7428     TYPE fit    APP app_vsc7428         MACHINE BeagleBoneBlack)
