--- a/.cmake/cmake-presets.yaml
+++ b/.cmake/cmake-presets.yaml
@@ -27,9 +27,9 @@ presets:
     lan966x:
         :arch:             "arm64"
         :cmake_flags:      "-DCMAKE_BUILD_TYPE=Release"
-        :brsdk:            "2019.02.7-103"
+        :brsdk:            "2019.02.7-102"
         :brsdk_arch:       "arm64-armv8_a-linux-gnu"
-        :brsdk_branch:     "test"
+        :brsdk_branch:     "brsdk.lan966x-2"
         :toolchainfile:    "arm64-armv8_a-linux-gnu/ls1046/x86_64-linux/share/buildroot/toolchainfile.cmake"
         :cmake:            "arm64-armv8_a-linux-gnu/ls1046/x86_64-linux/bin/cmake"
         :legal:            "arm64-armv8_a-linux-gnu/ls1046/legal-info"
