--- a/mesa/demo/CMakeLists.txt
+++ b/mesa/demo/CMakeLists.txt
@@ -261,12 +261,12 @@ if (CMAKE_SYSTEM_PROCESSOR STREQUAL "mipsel")
     #IMG_TARGET(NAME mipsel_vsc7449        TYPE mfi  APP app_vsc7449  MACHINE jaguar2_pcb111 )
 
 elseif (CMAKE_SYSTEM_PROCESSOR STREQUAL "aarch64")
-    IMG_TARGET(NAME fit_ls1046_vsc7468  TYPE fit      APP app_vsc7468         MACHINE ls1046a)
-    IMG_TARGET(NAME fit_vsc7558TSN      TYPE ext4     APP app_vsc7558TSN      MACHINE fireant)
-    IMG_TARGET(NAME fit_vsc7552TSN      TYPE ext4     APP app_vsc7552TSN      MACHINE fireant)
-    IMG_TARGET(NAME fit_vsc7549TSN      TYPE ext4     APP app_vsc7549TSN      MACHINE fireant)
-    IMG_TARGET(NAME fit_vsc7546TSN      TYPE ext4     APP app_vsc7546TSN      MACHINE fireant)
-    IMG_TARGET(NAME fit_vsc7556         TYPE ext4     APP app_vsc7556         MACHINE fireant)
+    #IMG_TARGET(NAME fit_ls1046_vsc7468  TYPE fit      APP app_vsc7468         MACHINE ls1046a)
+    #IMG_TARGET(NAME fit_vsc7558TSN      TYPE ext4     APP app_vsc7558TSN      MACHINE fireant)
+    #IMG_TARGET(NAME fit_vsc7552TSN      TYPE ext4     APP app_vsc7552TSN      MACHINE fireant)
+    #IMG_TARGET(NAME fit_vsc7549TSN      TYPE ext4     APP app_vsc7549TSN      MACHINE fireant)
+    #IMG_TARGET(NAME fit_vsc7546TSN      TYPE ext4     APP app_vsc7546TSN      MACHINE fireant)
+    #IMG_TARGET(NAME fit_vsc7556         TYPE ext4     APP app_vsc7556         MACHINE fireant)
     # IMG_TARGET(NAME fit_ls1046_vsc7449  TYPE fit       APP app_vsc7449         MACHINE ls1046a)
     # IMG_TARGET(NAME fit_ls1046_vsc7437  TYPE fit       APP app_vsc7437         MACHINE ls1046a)
     # IMG_TARGET(NAME fit_ls1046_vsc7438  TYPE fit       APP app_vsc7438         MACHINE ls1046a)
