CMAKE: Fixing build of lan966x

--- a/mesa/demo/CMakeLists.txt
+++ b/mesa/demo/CMakeLists.txt
@@ -100,7 +100,9 @@ macro(IMG_TARGET)
     set(multiValueArgs )
     cmake_parse_arguments(A "${options}" "${oneValueArgs}" "${multiValueArgs}" ${ARGN})
 
-    if (CMAKE_SYSTEM_PROCESSOR STREQUAL "aarch64")
+    if (CMAKE_SYSTEM_PROCESSOR STREQUAL "aarch64" AND A_MACHINE STREQUAL "ls1046a")
+        set(KERNEL "${RELOCATED_HOST_DIR}/../../ls1046/mscc-linux-ls1046.bin.xz")
+    elseif (CMAKE_SYSTEM_PROCESSOR STREQUAL "aarch64")
         set(KERNEL "${RELOCATED_HOST_DIR}/../fireant/mscc-linux-kernel.bin.gz")
     elseif(CMAKE_SYSTEM_PROCESSOR STREQUAL "armv7l" AND A_MACHINE STREQUAL "BeagleBoneBlack")
         set(KERNEL "${RELOCATED_HOST_DIR}/../bbb/mscc-linux-kernel.bin.gz")
