--- a/mesa/demo/CMakeLists.txt
+++ b/mesa/demo/CMakeLists.txt
@@ -3,6 +3,7 @@
 
 message(STATUS "CMAKE_TOOLCHAIN_FILE='${CMAKE_TOOLCHAIN_FILE}'")
 
+option(LAN966X_ONLY       "Extra flag needed because LAN966x and FA is not supported by the same BSP" OFF)
 option(BUILD_MESA_APP_ALL "Build all defined mesa demo applications" OFF)
 option(BUILD_MESA_IMG_ALL "Build all defined mesa demo firmware images" OFF)
 mark_as_advanced(BUILD_MESA_APP_ALL)
@@ -263,18 +264,21 @@ if (CMAKE_SYSTEM_PROCESSOR STREQUAL "mipsel")
     #IMG_TARGET(NAME mipsel_vsc7449        TYPE mfi  APP app_vsc7449  MACHINE jaguar2_pcb111 )
 
 elseif (CMAKE_SYSTEM_PROCESSOR STREQUAL "aarch64")
-    #IMG_TARGET(NAME fit_ls1046_vsc7468  TYPE fit      APP app_vsc7468         MACHINE ls1046a)
-    IMG_TARGET(NAME fit_vsc7558TSN      TYPE ext4     APP app_vsc7558TSN      MACHINE fireant)
-    IMG_TARGET(NAME fit_vsc7552TSN      TYPE ext4     APP app_vsc7552TSN      MACHINE fireant)
-    IMG_TARGET(NAME fit_vsc7549TSN      TYPE ext4     APP app_vsc7549TSN      MACHINE fireant)
-    IMG_TARGET(NAME fit_vsc7546TSN      TYPE ext4     APP app_vsc7546TSN      MACHINE fireant)
-    IMG_TARGET(NAME fit_vsc7556         TYPE ext4     APP app_vsc7556         MACHINE fireant)
-    # IMG_TARGET(NAME fit_ls1046_vsc7449  TYPE fit       APP app_vsc7449         MACHINE ls1046a)
-    # IMG_TARGET(NAME fit_ls1046_vsc7437  TYPE fit       APP app_vsc7437         MACHINE ls1046a)
-    # IMG_TARGET(NAME fit_ls1046_vsc7438  TYPE fit       APP app_vsc7438         MACHINE ls1046a)
-    # IMG_TARGET(NAME fit_ls1046_vsc7514  TYPE fit       APP app_vsc7514         MACHINE ls1046a)
-    # IMG_TARGET(NAME fit_ls1046_vsc7512  TYPE fit       APP app_vsc7512         MACHINE ls1046a)
-    IMG_TARGET(NAME fit_ls1046_lan9668  TYPE fit      APP app_lan9668         MACHINE ls1046a)
+    IF (${LAN966X_ONLY})
+        IMG_TARGET(NAME fit_ls1046_lan9668  TYPE fit      APP app_lan9668         MACHINE ls1046a)
+    else()
+        #IMG_TARGET(NAME fit_ls1046_vsc7468  TYPE fit      APP app_vsc7468         MACHINE ls1046a)
+        IMG_TARGET(NAME fit_vsc7558TSN      TYPE ext4     APP app_vsc7558TSN      MACHINE fireant)
+        IMG_TARGET(NAME fit_vsc7552TSN      TYPE ext4     APP app_vsc7552TSN      MACHINE fireant)
+        IMG_TARGET(NAME fit_vsc7549TSN      TYPE ext4     APP app_vsc7549TSN      MACHINE fireant)
+        IMG_TARGET(NAME fit_vsc7546TSN      TYPE ext4     APP app_vsc7546TSN      MACHINE fireant)
+        IMG_TARGET(NAME fit_vsc7556         TYPE ext4     APP app_vsc7556         MACHINE fireant)
+        # IMG_TARGET(NAME fit_ls1046_vsc7449  TYPE fit       APP app_vsc7449         MACHINE ls1046a)
+        # IMG_TARGET(NAME fit_ls1046_vsc7437  TYPE fit       APP app_vsc7437         MACHINE ls1046a)
+        # IMG_TARGET(NAME fit_ls1046_vsc7438  TYPE fit       APP app_vsc7438         MACHINE ls1046a)
+        # IMG_TARGET(NAME fit_ls1046_vsc7514  TYPE fit       APP app_vsc7514         MACHINE ls1046a)
+        # IMG_TARGET(NAME fit_ls1046_vsc7512  TYPE fit       APP app_vsc7512         MACHINE ls1046a)
+    endif()
 
 elseif(CMAKE_SYSTEM_PROCESSOR STREQUAL "armv7l")
     IMG_TARGET(NAME armv7_vsc7428     TYPE fit    APP app_vsc7428         MACHINE BeagleBoneBlack)
