--- a/mesa/demo/CMakeLists.txt
+++ b/mesa/demo/CMakeLists.txt
@@ -5,6 +5,7 @@ message(STATUS "CMAKE_TOOLCHAIN_FILE='${CMAKE_TOOLCHAIN_FILE}'")
 
 option(BUILD_MESA_APP_ALL "Build all defined mesa demo applications" OFF)
 option(BUILD_MESA_IMG_ALL "Build all defined mesa demo firmware images" OFF)
+mark_as_advanced(BUILD_MESA_APP_ALL)
 
 find_library(JSON_LIB json-c)
 if(NOT JSON_LIB)
@@ -64,6 +65,7 @@ macro(APP_TARGET)
     set(multiValueArgs )
     cmake_parse_arguments(A "${options}" "${oneValueArgs}" "${multiValueArgs}" ${ARGN})
     option(${A_NAME} "Build the MESA DEMO application for ${MESA}" OFF)
+    mark_as_advanced(${A_NAME})
     if (${BUILD_MESA_APP_ALL} OR ${BUILD_ALL})
         set(${A_NAME} ON CACHE BOOL "" FORCE)
     endif()
@@ -91,9 +93,9 @@ macro(IMG_TARGET)
         set(KERNEL "${RELOCATED_HOST_DIR}/../bbb/mscc-linux-kernel.bin.gz")
     endif()
 
-    option(${A_NAME} "Build the MESA-FIT DEMO for ${A_MESA}/${A_MEBA}" OFF)
+    option(IMG_${A_NAME}_${A_TYPE} "Build the MESA DEMO firmware image for ${A_MESA}/${A_MEBA}" OFF)
     if (${BUILD_MESA_IMG_ALL} OR ${BUILD_ALL})
-        set(${A_NAME} ON CACHE BOOL "" FORCE)
+        set(IMG_${A_NAME}_${A_TYPE} ON CACHE BOOL "" FORCE)
     endif()
 
     # Building up the imggen.rb command
@@ -139,7 +141,7 @@ macro(IMG_TARGET)
     # Make sure the 'init' program is installed, even though it is not always needed
     list(APPEND EXECUTABLES init)
 
-    if (${A_NAME})
+    if (IMG_${A_NAME}_${A_TYPE})
         if (${A_TYPE} STREQUAL "fit")
             add_custom_command(
                 OUTPUT ${A_NAME}.itb
@@ -219,57 +221,58 @@ APP_TARGET(NAME app_vsc7556            MESA vsc7556            MEBA meba_sparx5)
 
 
 if (CMAKE_SYSTEM_PROCESSOR STREQUAL "mipsel")
-    IMG_TARGET(NAME mfi_vsc7428         TYPE mfi  APP app_vsc7428  MACHINE luton_pcb091   )
-    IMG_TARGET(NAME mfi_vsc7429         TYPE mfi  APP app_vsc7429  MACHINE luton_pcb090   )
-    IMG_TARGET(NAME mfi_vsc7423         TYPE mfi  APP app_vsc7423  MACHINE luton_pcb091   )
-    IMG_TARGET(NAME mfi_vsc7468_pcb110  TYPE mfi  APP app_vsc7468  MACHINE jaguar2_pcb110 )
-    IMG_TARGET(NAME mfi_vsc7468_pcb111  TYPE mfi  APP app_vsc7468  MACHINE jaguar2_pcb111 )
-    IMG_TARGET(NAME mfi_vsc7464         TYPE mfi  APP app_vsc7464  MACHINE jaguar2_pcb110 )
-    IMG_TARGET(NAME mfi_vsc7514_pcb120  TYPE mfi  APP app_vsc7514  MACHINE ocelot_pcb120  )
-    IMG_TARGET(NAME mfi_vsc7514_pcb123  TYPE mfi  APP app_vsc7514  MACHINE ocelot_pcb123  )
-    IMG_TARGET(NAME mfi_vsc7513_pcb120  TYPE mfi  APP app_vsc7513  MACHINE ocelot_pcb120  )
-    IMG_TARGET(NAME mfi_vsc7513_pcb123  TYPE mfi  APP app_vsc7513  MACHINE ocelot_pcb123  )
-    IMG_TARGET(NAME mfi_vsc7438         TYPE mfi  APP app_vsc7438  MACHINE serval2_pcb112 )
-    IMG_TARGET(NAME mfi_vsc7436         TYPE mfi  APP app_vsc7436  MACHINE servalt_pcb116 )
-    IMG_TARGET(NAME mfi_vsc7410         TYPE mfi  APP app_vsc7410  MACHINE servalt_pcb116 )
-    IMG_TARGET(NAME mfi_vsc7430         TYPE mfi  APP app_vsc7430  MACHINE servalt_pcb116 )
-    IMG_TARGET(NAME mfi_vsc7437         TYPE mfi  APP app_vsc7437  MACHINE servalt_pcb116 )
-    IMG_TARGET(NAME mfi_vsc7435         TYPE mfi  APP app_vsc7435  MACHINE servalt_pcb116 )
-    IMG_TARGET(NAME mfi_vsc7415         TYPE mfi  APP app_vsc7415  MACHINE servalt_pcb116 )
-    IMG_TARGET(NAME mfi_vsc7424         TYPE mfi  APP app_vsc7424  MACHINE luton_pcb091   )
-    IMG_TARGET(NAME mfi_vsc7425_pcb091  TYPE mfi  APP app_vsc7425  MACHINE luton_pcb091   )
-    IMG_TARGET(NAME mfi_vsc7425_pcb090  TYPE mfi  APP app_vsc7425  MACHINE luton_pcb090   )
-    IMG_TARGET(NAME mfi_vsc7426         TYPE mfi  APP app_vsc7426  MACHINE luton_pcb090   )
-    IMG_TARGET(NAME mfi_vsc7427         TYPE mfi  APP app_vsc7427  MACHINE luton_pcb090   )
-    IMG_TARGET(NAME mfi_vsc7440         TYPE mfi  APP app_vsc7440  MACHINE servalt_pcb116 )
-    IMG_TARGET(NAME mfi_vsc7444         TYPE mfi  APP app_vsc7444  MACHINE jaguar2_pcb110 )
-    #IMG_TARGET(NAME mfi_vsc7442        TYPE mfi  APP app_vsc7442  MACHINE jaguar2_pcb111 )
-    IMG_TARGET(NAME mfi_vsc7448_pcb110  TYPE mfi  APP app_vsc7448  MACHINE jaguar2_pcb110 )
-    IMG_TARGET(NAME mfi_vsc7448_pcb111  TYPE mfi  APP app_vsc7448  MACHINE jaguar2_pcb111 )
-    #IMG_TARGET(NAME mfi_vsc7449        TYPE mfi  APP app_vsc7449  MACHINE jaguar2_pcb111 )
+    IMG_TARGET(NAME mipsel_vsc7428         TYPE mfi  APP app_vsc7428  MACHINE luton_pcb091   )
+    IMG_TARGET(NAME mipsel_vsc7429         TYPE mfi  APP app_vsc7429  MACHINE luton_pcb090   )
+    IMG_TARGET(NAME mipsel_vsc7423         TYPE mfi  APP app_vsc7423  MACHINE luton_pcb091   )
+    IMG_TARGET(NAME mipsel_vsc7468_pcb110  TYPE mfi  APP app_vsc7468  MACHINE jaguar2_pcb110 )
+    IMG_TARGET(NAME mipsel_vsc7468_pcb111  TYPE mfi  APP app_vsc7468  MACHINE jaguar2_pcb111 )
+    IMG_TARGET(NAME mipsel_vsc7464         TYPE mfi  APP app_vsc7464  MACHINE jaguar2_pcb110 )
+    IMG_TARGET(NAME mipsel_vsc7514_pcb120  TYPE mfi  APP app_vsc7514  MACHINE ocelot_pcb120  )
+    IMG_TARGET(NAME mipsel_vsc7514_pcb123  TYPE mfi  APP app_vsc7514  MACHINE ocelot_pcb123  )
+    IMG_TARGET(NAME mipsel_vsc7513_pcb120  TYPE mfi  APP app_vsc7513  MACHINE ocelot_pcb120  )
+    IMG_TARGET(NAME mipsel_vsc7513_pcb123  TYPE mfi  APP app_vsc7513  MACHINE ocelot_pcb123  )
+    IMG_TARGET(NAME mipsel_vsc7438         TYPE mfi  APP app_vsc7438  MACHINE serval2_pcb112 )
+    IMG_TARGET(NAME mipsel_vsc7436         TYPE mfi  APP app_vsc7436  MACHINE servalt_pcb116 )
+    IMG_TARGET(NAME mipsel_vsc7410         TYPE mfi  APP app_vsc7410  MACHINE servalt_pcb116 )
+    IMG_TARGET(NAME mipsel_vsc7430         TYPE mfi  APP app_vsc7430  MACHINE servalt_pcb116 )
+    IMG_TARGET(NAME mipsel_vsc7437         TYPE mfi  APP app_vsc7437  MACHINE servalt_pcb116 )
+    IMG_TARGET(NAME mipsel_vsc7435         TYPE mfi  APP app_vsc7435  MACHINE servalt_pcb116 )
+    IMG_TARGET(NAME mipsel_vsc7415         TYPE mfi  APP app_vsc7415  MACHINE servalt_pcb116 )
+    IMG_TARGET(NAME mipsel_vsc7424         TYPE mfi  APP app_vsc7424  MACHINE luton_pcb091   )
+    IMG_TARGET(NAME mipsel_vsc7425_pcb091  TYPE mfi  APP app_vsc7425  MACHINE luton_pcb091   )
+    IMG_TARGET(NAME mipsel_vsc7425_pcb090  TYPE mfi  APP app_vsc7425  MACHINE luton_pcb090   )
+    IMG_TARGET(NAME mipsel_vsc7426         TYPE mfi  APP app_vsc7426  MACHINE luton_pcb090   )
+    IMG_TARGET(NAME mipsel_vsc7427         TYPE mfi  APP app_vsc7427  MACHINE luton_pcb090   )
+    IMG_TARGET(NAME mipsel_vsc7440         TYPE mfi  APP app_vsc7440  MACHINE servalt_pcb116 )
+    IMG_TARGET(NAME mipsel_vsc7444         TYPE mfi  APP app_vsc7444  MACHINE jaguar2_pcb110 )
+    #IMG_TARGET(NAME mipsel_vsc7442        TYPE mfi  APP app_vsc7442  MACHINE jaguar2_pcb111 )
+    IMG_TARGET(NAME mipsel_vsc7448_pcb110  TYPE mfi  APP app_vsc7448  MACHINE jaguar2_pcb110 )
+    IMG_TARGET(NAME mipsel_vsc7448_pcb111  TYPE mfi  APP app_vsc7448  MACHINE jaguar2_pcb111 )
+    #IMG_TARGET(NAME mipsel_vsc7449        TYPE mfi  APP app_vsc7449  MACHINE jaguar2_pcb111 )
 
 elseif (CMAKE_SYSTEM_PROCESSOR STREQUAL "aarch64")
-    IMG_TARGET(NAME fit_vsc7558TSN      TYPE ext4     APP app_vsc7558TSN      MACHINE fireant)
-    IMG_TARGET(NAME fit_vsc7552TSN      TYPE ext4     APP app_vsc7552TSN      MACHINE fireant)
-    IMG_TARGET(NAME fit_vsc7549TSN      TYPE ext4     APP app_vsc7549TSN      MACHINE fireant)
-    IMG_TARGET(NAME fit_vsc7546TSN      TYPE ext4     APP app_vsc7546TSN      MACHINE fireant)
-    IMG_TARGET(NAME fit_vsc7556         TYPE ext4     APP app_vsc7556         MACHINE fireant)
-    # IMG_TARGET(NAME fit_ls1046_vsc7449  TYPE fit       APP app_vsc7449         MACHINE ls1046a)
-    # IMG_TARGET(NAME fit_ls1046_vsc7437  TYPE fit       APP app_vsc7437         MACHINE ls1046a)
-    # IMG_TARGET(NAME fit_ls1046_vsc7438  TYPE fit       APP app_vsc7438         MACHINE ls1046a)
-    # IMG_TARGET(NAME fit_ls1046_vsc7514  TYPE fit       APP app_vsc7514         MACHINE ls1046a)
-    # IMG_TARGET(NAME fit_ls1046_vsc7512  TYPE fit       APP app_vsc7512         MACHINE ls1046a)
+    IMG_TARGET(NAME arm64_vsc7558TSN      TYPE ext4     APP app_vsc7558TSN      MACHINE fireant)
+    IMG_TARGET(NAME arm64_vsc7552TSN      TYPE ext4     APP app_vsc7552TSN      MACHINE fireant)
+    IMG_TARGET(NAME arm64_vsc7549TSN      TYPE ext4     APP app_vsc7549TSN      MACHINE fireant)
+    IMG_TARGET(NAME arm64_vsc7546TSN      TYPE ext4     APP app_vsc7546TSN      MACHINE fireant)
+    IMG_TARGET(NAME arm64_vsc7556         TYPE ext4     APP app_vsc7556         MACHINE fireant)
+    # IMG_TARGET(NAME ls1046_vsc7449  TYPE fit       APP app_vsc7449         MACHINE ls1046a)
+    # IMG_TARGET(NAME ls1046_vsc7437  TYPE fit       APP app_vsc7437         MACHINE ls1046a)
+    # IMG_TARGET(NAME ls1046_vsc7438  TYPE fit       APP app_vsc7438         MACHINE ls1046a)
+    # IMG_TARGET(NAME ls1046_vsc7514  TYPE fit       APP app_vsc7514         MACHINE ls1046a)
+    # IMG_TARGET(NAME ls1046_vsc7512  TYPE fit       APP app_vsc7512         MACHINE ls1046a)
 
 elseif(CMAKE_SYSTEM_PROCESSOR STREQUAL "armv7l")
-    IMG_TARGET(NAME fit_bbb_vsc7428     TYPE fit    APP app_vsc7428         MACHINE BeagleBoneBlack)
-    IMG_TARGET(NAME fit_bbb_vsc7429     TYPE fit    APP app_vsc7429         MACHINE BeagleBoneBlack)
-    IMG_TARGET(NAME fit_bbb_vsc7468     TYPE fit    APP app_vsc7468         MACHINE BeagleBoneBlack)
-    IMG_TARGET(NAME fit_bbb_vsc7449     TYPE fit    APP app_vsc7449         MACHINE BeagleBoneBlack)
-    IMG_TARGET(NAME fit_bbb_vsc7436     TYPE fit    APP app_vsc7436         MACHINE BeagleBoneBlack)
-    IMG_TARGET(NAME fit_bbb_vsc7437     TYPE fit    APP app_vsc7437         MACHINE BeagleBoneBlack)
-    IMG_TARGET(NAME fit_bbb_vsc7438     TYPE fit    APP app_vsc7438         MACHINE BeagleBoneBlack)
-    IMG_TARGET(NAME fit_bbb_vsc7514     TYPE fit    APP app_vsc7514         MACHINE BeagleBoneBlack)
-    IMG_TARGET(NAME fit_bbb_vsc7512     TYPE fit    APP app_vsc7512         MACHINE BeagleBoneBlack)
-    IMG_TARGET(NAME fit_bbb_vsc7558TSN  TYPE fit    APP app_vsc7558TSN      MACHINE BeagleBoneBlack)
+    IMG_TARGET(NAME armv7_vsc7428     TYPE fit    APP app_vsc7428         MACHINE BeagleBoneBlack)
+    IMG_TARGET(NAME armv7_vsc7429     TYPE fit    APP app_vsc7429         MACHINE BeagleBoneBlack)
+    IMG_TARGET(NAME armv7_vsc7468     TYPE fit    APP app_vsc7468         MACHINE BeagleBoneBlack)
+    IMG_TARGET(NAME armv7_vsc7449     TYPE fit    APP app_vsc7449         MACHINE BeagleBoneBlack)
+    IMG_TARGET(NAME armv7_vsc7436     TYPE fit    APP app_vsc7436         MACHINE BeagleBoneBlack)
+    IMG_TARGET(NAME armv7_vsc7437     TYPE fit    APP app_vsc7437         MACHINE BeagleBoneBlack)
+    IMG_TARGET(NAME armv7_vsc7438     TYPE fit    APP app_vsc7438         MACHINE BeagleBoneBlack)
+    IMG_TARGET(NAME armv7_vsc7514     TYPE fit    APP app_vsc7514         MACHINE BeagleBoneBlack)
+    IMG_TARGET(NAME armv7_vsc7512     TYPE fit    APP app_vsc7512         MACHINE BeagleBoneBlack)
+    IMG_TARGET(NAME armv7_vsc7558TSN  TYPE fit    APP app_vsc7558TSN      MACHINE BeagleBoneBlack)
 
 endif()
+
