--- a/mesa/demo/CMakeLists.txt
+++ b/mesa/demo/CMakeLists.txt
@@ -125,6 +125,10 @@ macro(IMG_TARGET)
     # List of executables to install on target
     set(EXECUTABLES ${A_APP} cli er fa_board_fpga_init fa_spi_chip_id base64decode)
 
+    if (${HAS_RTE})
+        set(EXECUTABLES ${EXECUTABLES} lan9662-rte-demo)
+    endif ()
+
     # Add library dependencies
     set(SOLIBS  "")
 
