--- a/mesa/demo/CMakeLists.txt
+++ b/mesa/demo/CMakeLists.txt
@@ -234,8 +234,8 @@ APP_TARGET(NAME app_vsc7549TSN         MESA vsc7549TSN         MEBA meba_sparx5)
 APP_TARGET(NAME app_vsc7546TSN         MESA vsc7546TSN         MEBA meba_sparx5)
 APP_TARGET(NAME app_vsc7558TSN         MESA vsc7558TSN         MEBA meba_sparx5)
 APP_TARGET(NAME app_vsc7556            MESA vsc7556            MEBA meba_sparx5)
+APP_TARGET(NAME app_lan9662            MESA lan9662            MEBA meba_lan966x)
 APP_TARGET(NAME app_lan9668            MESA lan9668            MEBA meba_lan966x)
-APP_TARGET(NAME app_lan9668sr          MESA lan9668sr          MEBA meba_lan966x)
 
 
 if (CMAKE_SYSTEM_PROCESSOR STREQUAL "mipsel")
@@ -270,8 +270,8 @@ if (CMAKE_SYSTEM_PROCESSOR STREQUAL "mipsel")
 
 elseif (CMAKE_SYSTEM_PROCESSOR STREQUAL "aarch64")
     IF (${LAN966X_ONLY})
-        IMG_TARGET(NAME arm64_ls1046_lan9668    TYPE fit    APP app_lan9668         MACHINE ls1046a)
-        IMG_TARGET(NAME arm64_ls1046_lan9668sr  TYPE fit    APP app_lan9668sr       MACHINE ls1046a)
+        IMG_TARGET(NAME arm64_ls1046_lan9662  TYPE fit      APP app_lan9662         MACHINE ls1046a)
+        IMG_TARGET(NAME arm64_ls1046_lan9668  TYPE fit      APP app_lan9668         MACHINE ls1046a)
     else()
         #IMG_TARGET(NAME fit_ls1046_vsc7468  TYPE fit      APP app_vsc7468         MACHINE ls1046a)
         IMG_TARGET(NAME fit_vsc7558TSN      TYPE ext4     APP app_vsc7558TSN      MACHINE fireant)
