Renaming sw-lan9662-rte to sw-mera

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -251,9 +251,9 @@ if (${BUILD_MESA_CAPABILITY_DUMPER})
     target_link_libraries(capability_dumper dl)
 endif()
 
-if (EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/sw-lan9662-rte/CMakeLists.txt)
+if (EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/sw-mera/CMakeLists.txt)
     set(HAS_RTE ON)
-    add_subdirectory(sw-lan9662-rte)
+    add_subdirectory(sw-mera)
 else()
     set(HAS_RTE OFF)
 endif()
