Build MESA FIT images for LAN966x internal CPU

--- a/.cmake/cmake-presets.yaml
+++ b/.cmake/cmake-presets.yaml
@@ -67,19 +67,19 @@ presets:
     arm:
         :arch:             "arm"
         :cmake_flags:      "-DCMAKE_BUILD_TYPE=Release"
-        :brsdk:            "2020.02.3-326"
+        :brsdk:            "2020.02.3-250"
         :brsdk_arch:       "arm-cortex_a8-linux-gnueabihf"
-        :brsdk_branch:     "brsdk"
-        :toolchainfile:    "arm-cortex_a8-linux-gnu/x86_64-linux/share/buildroot/toolchainfile.cmake"
-        :cmake:            "arm-cortex_a8-linux-gnu/x86_64-linux/bin/cmake"
-        :legal:            "arm-cortex_a8-linux-gnu/bbb/legal-info"
+        :brsdk_branch:     "brsdk.lan966x-3"
+        :toolchainfile:    "arm-cortex_a8-linux-gnu/lan966x/x86_64-linux/share/buildroot/toolchainfile.cmake"
+        :cmake:            "arm-cortex_a8-linux-gnu/lan966x/x86_64-linux/bin/cmake"
+        :legal:            "arm-cortex_a8-linux-gnu/lan966x/legal-info"
 
     arm-debug:
         :arch:             "arm"
-        :cmake_flags:      "-DCMAKE_BUILD_TYPE=Debug"
-        :brsdk:            "2020.02.3-326"
+        :cmake_flags:      "-DCMAKE_BUILD_TYPE=Release"
+        :brsdk:            "2020.02.3-250"
         :brsdk_arch:       "arm-cortex_a8-linux-gnueabihf"
-        :brsdk_branch:     "brsdk"
+        :brsdk_branch:     "brsdk.lan966x-3"
         :toolchainfile:    "arm-cortex_a8-linux-gnu/bbb/x86_64-linux/share/buildroot/toolchainfile.cmake"
         :cmake:            "arm-cortex_a8-linux-gnu/bbb/x86_64-linux/bin/cmake"
         :legal:            "arm-cortex_a8-linux-gnu/bbb/legal-info"
