--- a/mesa/demo/CMakeLists.txt
+++ b/mesa/demo/CMakeLists.txt
@@ -273,32 +273,36 @@ elseif (CMAKE_SYSTEM_PROCESSOR STREQUAL "aarch64")
         IMG_TARGET(NAME arm64_ls1046_lan9662  TYPE fit      APP app_lan9662         MACHINE ls1046a)
         IMG_TARGET(NAME arm64_ls1046_lan9668  TYPE fit      APP app_lan9668         MACHINE ls1046a)
     else()
-        #IMG_TARGET(NAME fit_ls1046_vsc7468  TYPE fit      APP app_vsc7468         MACHINE ls1046a)
-        IMG_TARGET(NAME fit_vsc7558TSN      TYPE ext4     APP app_vsc7558TSN      MACHINE fireant)
-        IMG_TARGET(NAME fit_vsc7552TSN      TYPE ext4     APP app_vsc7552TSN      MACHINE fireant)
-        IMG_TARGET(NAME fit_vsc7549TSN      TYPE ext4     APP app_vsc7549TSN      MACHINE fireant)
-        IMG_TARGET(NAME fit_vsc7546TSN      TYPE ext4     APP app_vsc7546TSN      MACHINE fireant)
-        IMG_TARGET(NAME fit_vsc7556         TYPE ext4     APP app_vsc7556         MACHINE fireant)
-        # IMG_TARGET(NAME fit_ls1046_vsc7449  TYPE fit       APP app_vsc7449         MACHINE ls1046a)
-        # IMG_TARGET(NAME fit_ls1046_vsc7437  TYPE fit       APP app_vsc7437         MACHINE ls1046a)
-        # IMG_TARGET(NAME fit_ls1046_vsc7438  TYPE fit       APP app_vsc7438         MACHINE ls1046a)
-        # IMG_TARGET(NAME fit_ls1046_vsc7514  TYPE fit       APP app_vsc7514         MACHINE ls1046a)
-        # IMG_TARGET(NAME fit_ls1046_vsc7512  TYPE fit       APP app_vsc7512         MACHINE ls1046a)
+        #IMG_TARGET(NAME arm64_ls1046_vsc7468  TYPE fit      APP app_vsc7468         MACHINE ls1046a)
+        IMG_TARGET(NAME arm64_vsc7558TSN      TYPE ext4     APP app_vsc7558TSN      MACHINE fireant)
+        IMG_TARGET(NAME arm64_vsc7552TSN      TYPE ext4     APP app_vsc7552TSN      MACHINE fireant)
+        IMG_TARGET(NAME arm64_vsc7549TSN      TYPE ext4     APP app_vsc7549TSN      MACHINE fireant)
+        IMG_TARGET(NAME arm64_vsc7546TSN      TYPE ext4     APP app_vsc7546TSN      MACHINE fireant)
+        IMG_TARGET(NAME arm64_vsc7556         TYPE ext4     APP app_vsc7556         MACHINE fireant)
+        # IMG_TARGET(NAME arm64_ls1046_vsc7449  TYPE fit       APP app_vsc7449         MACHINE ls1046a)
+        # IMG_TARGET(NAME arm64_ls1046_vsc7437  TYPE fit       APP app_vsc7437         MACHINE ls1046a)
+        # IMG_TARGET(NAME arm64_ls1046_vsc7438  TYPE fit       APP app_vsc7438         MACHINE ls1046a)
+        # IMG_TARGET(NAME arm64_ls1046_vsc7514  TYPE fit       APP app_vsc7514         MACHINE ls1046a)
+        # IMG_TARGET(NAME arm64_ls1046_vsc7512  TYPE fit       APP app_vsc7512         MACHINE ls1046a)
+        IMG_TARGET(NAME ls1046_vsc7512        TYPE fit      APP app_vsc7512         MACHINE ocelot_pcb121)
     endif()
 
 elseif(CMAKE_SYSTEM_PROCESSOR STREQUAL "armv7l")
     IMG_TARGET(NAME armv7_lan9662     TYPE fit    APP app_lan9662         MACHINE lan966x)
     IMG_TARGET(NAME armv7_lan9668     TYPE fit    APP app_lan9668         MACHINE lan966x)
-    IMG_TARGET(NAME armv7_vsc7428     TYPE fit    APP app_vsc7428         MACHINE BeagleBoneBlack)
-    IMG_TARGET(NAME armv7_vsc7429     TYPE fit    APP app_vsc7429         MACHINE BeagleBoneBlack)
-    IMG_TARGET(NAME armv7_vsc7468     TYPE fit    APP app_vsc7468         MACHINE BeagleBoneBlack)
-    IMG_TARGET(NAME armv7_vsc7449     TYPE fit    APP app_vsc7449         MACHINE BeagleBoneBlack)
-    IMG_TARGET(NAME armv7_vsc7436     TYPE fit    APP app_vsc7436         MACHINE BeagleBoneBlack)
-    IMG_TARGET(NAME armv7_vsc7437     TYPE fit    APP app_vsc7437         MACHINE BeagleBoneBlack)
-    IMG_TARGET(NAME armv7_vsc7438     TYPE fit    APP app_vsc7438         MACHINE BeagleBoneBlack)
-    IMG_TARGET(NAME armv7_vsc7514     TYPE fit    APP app_vsc7514         MACHINE BeagleBoneBlack)
-    IMG_TARGET(NAME armv7_vsc7512     TYPE fit    APP app_vsc7512         MACHINE BeagleBoneBlack)
-    IMG_TARGET(NAME armv7_vsc7558TSN  TYPE fit    APP app_vsc7558TSN      MACHINE BeagleBoneBlack)
+
+
+    # TODO, needs to be enabled again
+    #IMG_TARGET(NAME armv7_vsc7428     TYPE fit    APP app_vsc7428         MACHINE BeagleBoneBlack)
+    #IMG_TARGET(NAME armv7_vsc7429     TYPE fit    APP app_vsc7429         MACHINE BeagleBoneBlack)
+    #IMG_TARGET(NAME armv7_vsc7468     TYPE fit    APP app_vsc7468         MACHINE BeagleBoneBlack)
+    #IMG_TARGET(NAME armv7_vsc7449     TYPE fit    APP app_vsc7449         MACHINE BeagleBoneBlack)
+    #IMG_TARGET(NAME armv7_vsc7436     TYPE fit    APP app_vsc7436         MACHINE BeagleBoneBlack)
+    #IMG_TARGET(NAME armv7_vsc7437     TYPE fit    APP app_vsc7437         MACHINE BeagleBoneBlack)
+    #IMG_TARGET(NAME armv7_vsc7438     TYPE fit    APP app_vsc7438         MACHINE BeagleBoneBlack)
+    #IMG_TARGET(NAME armv7_vsc7514     TYPE fit    APP app_vsc7514         MACHINE BeagleBoneBlack)
+    #IMG_TARGET(NAME armv7_vsc7512     TYPE fit    APP app_vsc7512         MACHINE BeagleBoneBlack)
+    #IMG_TARGET(NAME armv7_vsc7558TSN  TYPE fit    APP app_vsc7558TSN      MACHINE BeagleBoneBlack)
 
 endif()
 
