Adding MRP interconenct and automanager
- Added MRP example code and test of the same
- Added MRP documentation
- Added MRP feature to control copying of Test frames with lower priority. Added MRP documentation
- Full MRP test with interconnected nodes. Added MRM port blocking in interconnected node
- Full MRP test with interconnected nodes
- Added Interconnect MIM and MRM node test
- Added MRP Auto manager test
- Now the MRP ring test is running on the latest implementation
- Basic MRP interconnect support

--- a/mesa/docs/sitemap.yaml
+++ b/mesa/docs/sitemap.yaml
@@ -62,6 +62,7 @@ pages:
         - src: "mesa/docs/qos/qos.adoc"
         - src: "mesa/docs/acl/acl.adoc"
         - src: "mesa/docs/vop/vop.adoc"
+        - src: "mesa/docs/mrp/mrp.adoc"
         - src: "mesa/docs/ts/ts.adoc"
 
     - name: "Cookbook examples"
@@ -146,6 +147,12 @@ pages:
             name: "Description"
           - src: "mesa/demo/examples/vop.c"
 
+        - name: "OAM MRP"
+          pages:
+          - src: "mesa/docs/examples/mrp.adoc"
+            name: "Description"
+          - src: "mesa/demo/examples/mrp.c"
+
         - name: "TS Transparent clock"
           pages:
           - src: "mesa/docs/examples/ts-transparent-clock.adoc"
@@ -178,6 +185,7 @@ pages:
         - src:  "mesa/include/microchip/ethernet/switch/api/tsn.h"
         - src:  "mesa/include/microchip/ethernet/switch/api/types.h"
         - src:  "mesa/include/microchip/ethernet/switch/api/vop.h"
+        - src:  "mesa/include/microchip/ethernet/switch/api/mrp.h"
         - src:  "mesa/include/microchip/ethernet/switch/api/wis.h"
 
     - name: "MEBA API Reference"
